tests/tests/snapshots/golden__gen__python__kafka-pipeline.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
.dockerignore
============================================================
.venv
__pycache__
.pytest_cache
============================================================
Dockerfile
============================================================
FROM python:3.12-slim

WORKDIR /srv

COPY pyproject.toml ./
RUN pip install --no-cache-dir uv && uv pip install --system -r pyproject.toml

COPY app ./app
COPY openapi.json ./

EXPOSE 8000
CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
============================================================
README.md
============================================================
# Clickstream

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `app/services/`, which is yours.

## Run

```sh
uv sync
uv run uvicorn app.main:app --reload
```

Workers and scheduled jobs run separately:

```sh
uv run python -m app.workers
```

Or bring up the full stack (API, workers/jobs, NATS):

```sh
docker compose up --build
```

## Test & lint

```sh
uv run pytest
uv run ruff check .
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `app/main.py` | Application assembly | compiler |
| `app/api/` | HTTP routers (one per api) | compiler |
| `app/services/` | Business-logic handlers | **you** |
| `app/workers/` | Queue consumers and scheduled jobs | compiler |
| `app/config.py` | Environment-driven settings | compiler |
============================================================
app/__init__.py
============================================================
"""Clickstream — generated by CIaC. Structure is compiler-owned;
business logic belongs in `app/services/`."""
============================================================
app/api/__init__.py
============================================================
"""HTTP routers."""
============================================================
app/api/ingest.py
============================================================
"""Request pipeline for `api Ingest`. Generated by CIaC.

Pipeline: publish clickstream.clicks -> Return
"""

from typing import Any

from fastapi import APIRouter

from app.queue import publish
from app.schemas import Click

router = APIRouter()


@router.post("/clicks")
async def ingest(
    payload: Click,
) -> dict[str, Any]:
    result = payload

    await publish("clickstream.clicks", result.model_dump(mode="json"))
    return {"status": "accepted", "data": result.model_dump(mode="json")}
============================================================
app/config.py
============================================================
"""Runtime configuration for Clickstream. Generated by CIaC.

Every value can be overridden through the environment (or an `.env`
file): field names map to upper-cased variables, e.g. `DATABASE_URL`.
"""

from functools import lru_cache

from pydantic_settings import BaseSettings, SettingsConfigDict


class Settings(BaseSettings):
    """Environment-driven settings with development defaults."""

    model_config = SettingsConfigDict(env_file=".env", extra="ignore")
    kafka_url: str = "localhost:9092"


@lru_cache
def get_settings() -> Settings:
    return Settings()
============================================================
app/main.py
============================================================
"""Application assembly for Clickstream. Generated by CIaC."""

import json
from pathlib import Path
from typing import Any

from fastapi import FastAPI

from app.api.ingest import router as ingest_router


app = FastAPI(title="Clickstream")

# The document `ciac build` emitted alongside this app (openapi.json,
# derived straight from the IR) is the single source of truth for the
# API spec; FastAPI's own auto-generated one would be a second,
# slightly-different opinion on the same routes.
_openapi_path = Path(__file__).resolve().parent.parent / "openapi.json"


def _openapi() -> dict[str, Any]:
    if app.openapi_schema is None:
        app.openapi_schema = json.loads(_openapi_path.read_text())
    return app.openapi_schema


app.openapi = _openapi


@app.get("/health")
async def health() -> dict[str, str]:
    return {"status": "ok"}


app.include_router(ingest_router)
============================================================
app/queue.py
============================================================
"""Kafka queue access. Generated by CIaC.

`publish` pipeline steps send JSON payloads to their stream's topic;
workers consume their bound topic in per-worker consumer groups (see
`app/workers/`). The producer is started lazily on first publish.
"""

import json
from typing import Any

from aiokafka import AIOKafkaProducer

from app.config import get_settings

_producer: AIOKafkaProducer | None = None


async def get_producer() -> AIOKafkaProducer:
    global _producer
    if _producer is None:
        _producer = AIOKafkaProducer(bootstrap_servers=get_settings().kafka_url)
        await _producer.start()
    return _producer


async def publish(subject: str, payload: dict[str, Any]) -> None:
    producer = await get_producer()
    await producer.send_and_wait(subject, json.dumps(payload).encode())
============================================================
app/schemas.py
============================================================
"""Data schemas from the program's `record` declarations. Generated by CIaC."""


from pydantic import BaseModel



class Click(BaseModel):
    id: str
    page: str

============================================================
app/services/__init__.py
============================================================
"""Business-logic handlers. This is where your code goes."""
============================================================
app/services/enrich_click.py
============================================================
"""Handler for the `EnrichClick` pipeline step. Generated by CIaC.

This file is yours: the compiler wires `EnrichClick` into its
pipelines, and you implement the business logic in `handle`.
"""

from app.schemas import Click



class EnrichClick:
    """Business logic for the `EnrichClick` step.
    """

    def __init__(
        self,
    ) -> None:
        pass

    async def handle(self, payload: Click) -> Click:
        # TODO: implement the EnrichClick step.
        return payload
============================================================
app/workers/__init__.py
============================================================
"""Queue-driven workers and scheduled jobs. Run them all with `python -m app.workers`."""
============================================================
app/workers/__main__.py
============================================================
"""Runs every worker in one process: `python -m app.workers`. Generated by CIaC."""

import asyncio

from app.workers import (
    enrich,
)


async def main() -> None:
    await asyncio.gather(
        enrich.run(),
    )


if __name__ == "__main__":
    asyncio.run(main())
============================================================
app/workers/enrich.py
============================================================
"""Worker pipeline for `worker Enrich`. Generated by CIaC.

Consumes `clickstream.clicks` in queue group `enrich`
so replicas of this worker load-balance messages between them.
"""

import asyncio
import logging

from aiokafka import AIOKafkaConsumer

from app.config import get_settings
from app.schemas import Click
from app.services.enrich_click import EnrichClick

SUBJECT = "clickstream.clicks"
QUEUE_GROUP = "enrich"
CONCURRENCY = 1
MAX_RETRIES = 0
logger = logging.getLogger(__name__)



async def handle_message_once(payload: Click) -> None:
    result = payload

    result = await EnrichClick().handle(result)


async def handle_message(payload: Click) -> None:
    for attempt in range(MAX_RETRIES + 1):
        try:
            await handle_message_once(payload)
            return
        except Exception:
            if attempt >= MAX_RETRIES:
                logger.exception("message processing failed after retries")
                return
            logger.warning("message processing failed; retrying", exc_info=True)


async def _consume(worker_index: int) -> None:
    consumer = AIOKafkaConsumer(
        SUBJECT,
        group_id=QUEUE_GROUP,
        bootstrap_servers=get_settings().kafka_url,
    )
    await consumer.start()
    logger.info("worker Enrich consumer %s subscribed", worker_index)
    try:
        async for message in consumer:
            await handle_message(Click.model_validate_json(message.value))
    finally:
        await consumer.stop()


async def run() -> None:
    """Subscribes and processes messages forever."""
    await asyncio.gather(*(_consume(idx) for idx in range(CONCURRENCY)))
============================================================
conftest.py
============================================================
"""Pytest configuration. Generated by CIaC."""

import pytest


@pytest.fixture
def anyio_backend() -> str:
    return "asyncio"
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    healthcheck:
      test: ["CMD", "bash", "-c", "exec 3<>/dev/tcp/127.0.0.1/8000"]
      interval: 1s
      timeout: 3s
      retries: 30
    environment:
      KAFKA_URL: queue:9092
    depends_on:
      queue:
        condition: service_started

  workers:
    build: .
    command: ["python", "-m", "app.workers"]
    environment:
      KAFKA_URL: queue:9092
    depends_on:
      queue:
        condition: service_started

  queue:
    image: apache/kafka:3.8.0
    # Dual listeners (v0.13 M2): in-network clients use queue:9092;
    # host clients (the generated tests/system suite) use
    # localhost:29092 -- a host client on 9092 would be redirected to
    # the unresolvable advertised name `queue`.
    ports:
      - "29092:29092"
    environment:
      KAFKA_NODE_ID: 1
      KAFKA_PROCESS_ROLES: broker,controller
      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@queue:9093
      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:29092
      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://queue:9092,EXTERNAL://localhost:29092
      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
============================================================
openapi.json
============================================================
{
  "components": {
    "schemas": {
      "Click": {
        "properties": {
          "id": {
            "format": "uuid",
            "type": "string"
          },
          "page": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "page"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "Clickstream",
    "version": "0.1.0"
  },
  "openapi": "3.0.3",
  "paths": {
    "/clicks": {
      "post": {
        "operationId": "ingest",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/Click"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "data": {
                      "$ref": "#/components/schemas/Click"
                    },
                    "status": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "status",
                    "data"
                  ],
                  "type": "object"
                }
              }
            },
            "description": "Success."
          }
        }
      }
    },
    "/health": {
      "get": {
        "operationId": "health",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "status": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "status"
                  ],
                  "type": "object"
                }
              }
            },
            "description": "Liveness check."
          }
        }
      }
    }
  }
}
============================================================
pyproject.toml
============================================================
[project]
name = "clickstream"
version = "0.1.0"
description = "Generated by CIaC from `service Clickstream`"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "aiokafka>=0.11",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anyio>=4.4",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# tests/system/ needs the compose stack up and is run only by
# `ciac verify --system` (from its own directory); plain `pytest`
# must never collect it.
norecursedirs = ["tests/system"]

[tool.ruff]
target-version = "py311"
============================================================
tests/test_smoke.py
============================================================
"""Smoke tests generated by CIaC.

These run without any infrastructure: clients are lazy and the ASGI
transport below does not trigger the startup lifespan.
"""

import httpx
import pytest

from app.main import app


def _client(*, raise_app_exceptions: bool = True) -> httpx.AsyncClient:
    transport = httpx.ASGITransport(app=app, raise_app_exceptions=raise_app_exceptions)
    return httpx.AsyncClient(transport=transport, base_url="http://test")


def test_routes_registered() -> None:
    paths = set(app.openapi()["paths"])
    assert "/clicks" in paths
    assert "/health" in paths


@pytest.mark.anyio
async def test_health() -> None:
    async with _client() as client:
        response = await client.get("/health")
    assert response.status_code == 200
    assert response.json() == {"status": "ok"}
