tests/tests/snapshots/golden__gen__python__modular-video.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
.dockerignore
============================================================
.venv
__pycache__
.pytest_cache
============================================================
Dockerfile
============================================================
FROM python:3.12-slim

WORKDIR /srv

COPY pyproject.toml ./
RUN pip install --no-cache-dir uv && uv pip install --system -r pyproject.toml

COPY app ./app
COPY openapi.json ./

EXPOSE 8000
CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
============================================================
README.md
============================================================
# ModularVideo

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `app/services/`, which is yours.

## Run

```sh
uv sync
uv run uvicorn app.main:app --reload
```

Or bring up the full stack (API):

```sh
docker compose up --build
```

## Test & lint

```sh
uv run pytest
uv run ruff check .
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `app/main.py` | Application assembly | compiler |
| `app/api/` | HTTP routers (one per api) | compiler |
| `app/services/` | Business-logic handlers | **you** |
| `app/workers/` | Queue consumers and scheduled jobs | compiler |
| `app/config.py` | Environment-driven settings | compiler |
============================================================
app/__init__.py
============================================================
"""ModularVideo — generated by CIaC. Structure is compiler-owned;
business logic belongs in `app/services/`."""
============================================================
app/api/__init__.py
============================================================
"""HTTP routers."""
============================================================
app/api/upload.py
============================================================
"""Request pipeline for `api Upload`. Generated by CIaC.

Pipeline: StoreVideo -> Return
"""

from typing import Any

from fastapi import APIRouter

from app.schemas import Video
from app.logic.store_video import StoreVideo

router = APIRouter()


@router.post("/videos")
async def upload(
    payload: Video,
) -> dict[str, Any]:
    result = payload

    result = await StoreVideo().handle(result)
    return {"status": "accepted", "data": result.model_dump(mode="json")}
============================================================
app/config.py
============================================================
"""Runtime configuration for ModularVideo. Generated by CIaC.

Every value can be overridden through the environment (or an `.env`
file): field names map to upper-cased variables, e.g. `DATABASE_URL`.
"""

from functools import lru_cache

from pydantic_settings import BaseSettings, SettingsConfigDict


class Settings(BaseSettings):
    """Environment-driven settings with development defaults."""

    model_config = SettingsConfigDict(env_file=".env", extra="ignore")


@lru_cache
def get_settings() -> Settings:
    return Settings()
============================================================
app/logic/__init__.py
============================================================
"""Compiler-owned typed-handler logic, lowered from `.ciac` handler bodies. Regenerated on every build; business logic lives in the `.ciac` source, not here."""
============================================================
app/logic/store_video.py
============================================================
"""Handler for the `StoreVideo` typed handler. Generated by CIaC.

Compiler-owned: lowered from the source `handler StoreVideo(..) { .. }` body
on every build. Business logic lives in the `.ciac` source, not here.
"""
from app.schemas import Video


class StoreVideo:
    """Business logic for the `StoreVideo` handler."""

    def __init__(
        self,
    ) -> None:
        pass

    async def handle(self, v: Video) -> Video:
        v1 = v.model_copy(update={"status": "Ready"})
        return v1
============================================================
app/main.py
============================================================
"""Application assembly for ModularVideo. Generated by CIaC."""

import json
from pathlib import Path
from typing import Any

from fastapi import FastAPI

from app.api.upload import router as upload_router
from app.config import get_settings
from app.state import AppState, set_current



def create_app(state: AppState) -> FastAPI:
    """Assembles this service's FastAPI app against an explicit
    `AppState` (v0.17 M3) -- `AppState.production(...)` for the real
    server (this file's bottom line), `AppState.simulation(...)` for a
    future in-process simulation run (v0.17 M4 onward). Installed
    before any route or lifespan code can run, so every generated
    dependency (`app/db.py`, `app/cache.py`, ...) resolves through this
    one state, never a module-global cache of its own.
    """
    set_current(state)

    app = FastAPI(title="ModularVideo")

    # The document `ciac build` emitted alongside this app (openapi.json,
    # derived straight from the IR) is the single source of truth for the
    # API spec; FastAPI's own auto-generated one would be a second,
    # slightly-different opinion on the same routes.
    openapi_path = Path(__file__).resolve().parent.parent / "openapi.json"

    def _openapi() -> dict[str, Any]:
        if app.openapi_schema is None:
            app.openapi_schema = json.loads(openapi_path.read_text())
        return app.openapi_schema

    app.openapi = _openapi

    @app.get("/health")
    async def health() -> dict[str, str]:
        return {"status": "ok"}


    app.include_router(upload_router)

    return app


app = create_app(AppState.production(get_settings()))
============================================================
app/schemas.py
============================================================
"""Data schemas from the program's `record` declarations. Generated by CIaC."""

from typing import Literal

from pydantic import BaseModel



class Video(BaseModel):
    id: str
    title: str
    status: Literal["Pending", "Ready"]

============================================================
app/state.py
============================================================
"""The explicit production/simulation dependency-injection boundary
(v0.17 M3). Generated by CIaC.

Every provider module's `get_*` accessor (`app/db.py`, `app/cache.py`,
`app/queue.py`, ...) reads and lazily populates its client(s) here
instead of keeping a private module-global cache -- `AppState` is the
one seam both a real server process and a future simulation run install
themselves through, never a second copy of provider state that could
drift from it.

Two constructors, always explicit -- simulation is never selected by an
environment variable in the normal server binary, and a failed
production connection never falls back to fake state:

    state = AppState.production(settings)   # real provider adapters
    state = AppState.simulation(world)       # in-process fakes (v0.17 M4+)

`AppState.production` builds nothing eagerly; provider clients stay as
lazy as they are today (see `app/db.py`'s own docstring) -- constructing
an `AppState` never requires a running database, cache, or broker.
"""

from __future__ import annotations

import contextvars
from dataclasses import dataclass, field
from typing import Any

from app.config import Settings


@dataclass
class AppState:
    """Every provider client this service's generated code can access,
    keyed by capability instance name where a capability supports more
    than one named instance. Fields are typed `Any` deliberately: the
    concrete client type (an `AsyncEngine`, a `redis.Redis`, ...) is
    each provider module's own concern, not this file's -- `AppState`
    is a storage seam, not a second place those types get declared.
    """

    settings: Settings
    engines: dict[str, Any] = field(default_factory=dict)
    sessionmakers: dict[str, Any] = field(default_factory=dict)
    caches: dict[str, Any] = field(default_factory=dict)
    queue_client: Any | None = None
    jwks_client: Any | None = None
    object_stores: dict[str, Any] = field(default_factory=dict)
    emails: dict[str, Any] = field(default_factory=dict)
    searches: dict[str, Any] = field(default_factory=dict)
    http_clients: dict[str, Any] = field(default_factory=dict)

    @classmethod
    def production(cls, settings: Settings) -> "AppState":
        """Real provider adapters, built lazily on first access by each
        provider module -- this constructor itself never opens a
        connection."""
        return cls(settings=settings)

    @classmethod
    def simulation(cls, world: Any) -> "AppState":
        """In-process fakes, installed by the `ciac-sim` runner. Not yet
        implemented -- no fake has been built (that starts v0.17 M4) --
        but the signature exists now so the explicit production()/
        simulation() boundary never needs to change shape once fakes
        land; calling this today is itself the honest failure."""
        raise NotImplementedError(
            "AppState.simulation() has no fakes to construct yet -- "
            "the deterministic simulator lands starting v0.17 M4"
        )


_current: contextvars.ContextVar[AppState] = contextvars.ContextVar("ciac_app_state")


def set_current(state: AppState) -> None:
    """Installs `state` as the active state for this process (or, once
    a multi-service simulation runner exists, this async context --
    `contextvars` propagate per-task, which is what lets a future
    single-process multi-service runner give each service's tasks their
    own `AppState` without a global mutable singleton)."""
    _current.set(state)


def current() -> AppState:
    """The active `AppState` -- set once by `create_app` before any
    request or generated task runs."""
    return _current.get()
============================================================
conftest.py
============================================================
"""Pytest configuration. Generated by CIaC."""

import pytest


@pytest.fixture
def anyio_backend() -> str:
    return "asyncio"
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    healthcheck:
      test: ["CMD", "bash", "-c", "exec 3<>/dev/tcp/127.0.0.1/8000"]
      interval: 1s
      timeout: 3s
      retries: 30
============================================================
openapi.json
============================================================
{
  "components": {
    "schemas": {
      "Video": {
        "properties": {
          "id": {
            "format": "uuid",
            "type": "string"
          },
          "status": {
            "$ref": "#/components/schemas/VideoStatus"
          },
          "title": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "title",
          "status"
        ],
        "type": "object"
      },
      "VideoStatus": {
        "enum": [
          "Pending",
          "Ready"
        ],
        "type": "string"
      }
    }
  },
  "info": {
    "title": "ModularVideo",
    "version": "0.1.0"
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "operationId": "health",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "status": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "status"
                  ],
                  "type": "object"
                }
              }
            },
            "description": "Liveness check."
          }
        }
      }
    },
    "/videos": {
      "post": {
        "operationId": "upload",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/Video"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "data": {
                      "$ref": "#/components/schemas/Video"
                    },
                    "status": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "status",
                    "data"
                  ],
                  "type": "object"
                }
              }
            },
            "description": "Success."
          }
        }
      }
    }
  }
}
============================================================
pyproject.toml
============================================================
[project]
name = "modular-video"
version = "0.1.0"
description = "Generated by CIaC from `service ModularVideo`"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anyio>=4.4",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# tests/system/ needs the compose stack up and is run only by
# `ciac verify --system` (from its own directory); plain `pytest`
# must never collect it.
norecursedirs = ["tests/system"]

[tool.ruff]
target-version = "py311"
============================================================
tests/test_logic_store_video.py
============================================================
"""Generated behavioral test for `StoreVideo`. Regenerated on every build.

Exercises the lowered handler body against mocked runtime dependencies;
real persistence round-trips are `ciac verify --live`'s job, not this test.
"""
import pytest

from uuid import uuid4
from app.logic.store_video import StoreVideo
from app.schemas import Video


@pytest.mark.anyio
async def test_store_video_handle() -> None:
    handler = StoreVideo()

    result = await handler.handle(Video(id=str(uuid4()), title="test", status="Pending"))

    assert isinstance(result, Video)
============================================================
tests/test_smoke.py
============================================================
"""Smoke tests generated by CIaC.

These run without any infrastructure: clients are lazy and the ASGI
transport below does not trigger the startup lifespan.
"""

import httpx
import pytest

from app.main import app


def _client(*, raise_app_exceptions: bool = True) -> httpx.AsyncClient:
    transport = httpx.ASGITransport(app=app, raise_app_exceptions=raise_app_exceptions)
    return httpx.AsyncClient(transport=transport, base_url="http://test")


def test_routes_registered() -> None:
    paths = set(app.openapi()["paths"])
    assert "/videos" in paths
    assert "/health" in paths


@pytest.mark.anyio
async def test_health() -> None:
    async with _client() as client:
        response = await client.get("/health")
    assert response.status_code == 200
    assert response.json() == {"status": "ok"}
